dark mode issues fixed and updated in all pages

--- a/css/index.css
+++ b/css/index.css
@@ -46,6 +46,7 @@ header svg :hover{
 
 .a-home{
     color:#141204 ;
+    transition-duration: 0.3s;
 }
 .a-shop{
     color: #E8985E;
